--- a/index.html
+++ b/index.html
@@ -1506,7 +1506,7 @@
 <div class="relative" style="z-index: 1;">
 <form action="/search" class="search-input--fancy" method="GET">
 <i class="icon-search-charcoal icon-medium search-input__search-icon"></i>
-<input aria-label="Search courses and more…" autocomplete="off" class="search-input__input is-blank" data-name="AUTOCOMPLETE_SEARCHBOX" data-track-ga='{"category":"autocomplete","action":"open searchbox","label":"homepage"}' id="autocomplete-search-962183079" name="q" placeholder="Search 100,000 courses…" type="search" value=""/>
+<input aria-label="Search courses and more…" autocomplete="off" class="search-input__input is-blank" data-name="AUTOCOMPLETE_SEARCHBOX" data-track-ga='{"category":"autocomplete","action":"open searchbox","label":"homepage"}' id="autocomplete-search-962183079" name="q" placeholder="100,000 पाठ्यक्रम खोजें…" type="search" value=""/>
 <button aria-controls="autocomplete-search-962183079" aria-label="Clear" class="search-input__clear-button" data-name="AUTOCOMPLETE_CLEAR" hidden="" type="button"><i class="icon-x-charcoal icon-xsmall"></i></button>
 </form>
 <div class="search-results">
